vpn01/configs/iptables.rules
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Oct  7 20:48:20 2025
*filter
:INPUT ACCEPT [3600:397318]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [440:79724]
-A INPUT -i wg0 -p icmp -j ACCEPT
-A INPUT -i wg0 -p icmp -j ACCEPT
-A INPUT -i wg0 -p icmp -j ACCEPT
-A INPUT -i enp0s8 -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -i enp0s8 -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -i wg0 -p icmp -j ACCEPT
-A OUTPUT -o wg0 -p icmp -j ACCEPT
-A OUTPUT -o wg0 -p icmp -j ACCEPT
-A OUTPUT -o enp0s8 -p udp -m udp --sport 51820 -j ACCEPT
-A OUTPUT -o enp0s8 -p udp -m udp --sport 51820 -j ACCEPT
-A OUTPUT -o wg0 -p icmp -j ACCEPT
COMMIT
# Completed on Tue Oct  7 20:48:20 2025
